--- a/index.ipynb
+++ b/index.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,22 +40,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def permutation(n,k):\n",
-    "    None"
+    "    permut = factorial(n)/factorial(n-k)\n",
+    "    return permut"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def combination(n,k):\n",
-    "    None"
+    "    combin = factorial(n)/(factorial(n-k)*factorial(k))\n",
+    "    return combin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2598960.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combination(52,5)"
    ]
   },
   {
@@ -82,6 +104,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "504.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "medal_top_3 = permutation(9,3)\n",
+    "medal_top_3"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -99,6 +142,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scholarship_top_3 = combination(9,3)\n",
+    "scholarship_top_3"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,17 +172,24 @@
     "\n",
     "#### a. What is the probability that you draw exactly 2 consonants and 3 vowels when drawing 5 letters?\n",
     "\n",
-    "Write the code for getting total number of ways of drawing 2 out of 6 and 3 out of 4 below"
+    "Write the code for getting total number of ways of drawing 2 out of 6 and 3 out of 4 below\n",
+    "\n",
+    "** solution **\n",
+    "\n",
+    "The total number of ways of drawing 2 out of 6 and 3 out of 4 is equal to\n",
+    "\n",
+    "$\\displaystyle\\binom{6}{2} \\times \\displaystyle\\binom{4}{3}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_cons = None\n",
-    "draw_vow = None"
+    "# $\\displaystyle\\binom{6}{2} \\times \\displaystyle\\binom{4}{3}$\n",
+    "draw_cons = combination(6,2)\n",
+    "draw_vow = combination(4,3)"
    ]
   },
   {
@@ -130,11 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample = None"
+    "sample = combination(10,5)"
    ]
   },
   {
@@ -146,11 +217,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.23809523809523808"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None # 0.23809523809523808"
+    "(draw_cons*draw_vow)/sample # 0.23809523809523808"
    ]
   },
   {
@@ -164,12 +246,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_cons = None\n",
-    "draw_vow = None"
+    "draw_cons = combination(6,2)\n",
+    "draw_vow = combination(4,3)"
    ]
   },
   {
@@ -181,11 +263,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "order_5_letters = None"
+    "order_5_letters = factorial(5)"
    ]
   },
   {
@@ -197,11 +279,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In total, 7200.0 words with 2 consonants and 3 vowels can be formed from our existing letter pool.\n"
+     ]
+    }
+   ],
    "source": [
-    "total_words = None\n",
+    "total_words = draw_cons*draw_vow*order_5_letters\n",
     "print(\"In total,\",  total_words, \"words with 2 consonants and 3 vowels can be formed from our existing letter pool.\")\n",
     "# In total, 7200.0 words with 2 consonants and 3 vowels can be formed from our existing letter pool."
    ]
@@ -216,11 +306,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here  # the answer is 2627625.0"
+    "first_team = combination(16,4)\n",
+    "second_team = combination(12,4)\n",
+    "third_team = combination(8,4)\n",
+    "fourth_team = combination(4,4)  # the answer is 2627625.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2627625.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_comb =(first_team *second_team *third_team* fourth_team) / factorial(4)\n",
+    "total_comb"
    ]
   },
   {
@@ -249,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
